# SQL-to-text-bench

./: .gitignore  README.md  appsettings.json  main.py  process.py  profiler.py  pyproject.toml  run_profiling
db/: dataset_1.json  dataset_2.json  temp.md  tempbis.md
src/: AiInsightApi.py  BenchInput.py  BenchOutput.py  CliConfig.py  GeminiApi.py  MetadataModel.py  Processer.py  SqliteConnector.py  utils.py
src/bench/: AiInsightApi.py  BenchConfig.py  BenchOutput.py  Processer.py
src/common/: string_utils.py  utils.py
src/lib/: Config.py  Errors.py  SqliteConnector.py  string_utils.py  utils.py
src/profiling/: GeminiApi.py  GenAi.py  MetadataModel.py  Models.py  ProfilingConfig.py
test/: conftest.py  test_db.py
