[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.45.0",
    "matplotlib>=3.10.7",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[tool.pyright]
# Suppress the diagnostic by setting it to false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnboundVariable = false
reportAny = false
typeCheckingMode= "basic"
